--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /* CSS VARIABLES */
 :root {
    /* Colors */
-   --color-primary: #2a2a2a;
-   --color-secondary: #666;
+   --color-primary: #000000;
+   --color-secondary: #000000;
    --color-white: #fff;
    
    /* Backgrounds */
-   --bg-light: #f5f5f5;
+   --bg-light: #fbfbfb;
    --bg-lighter: #ddd;
    
    /* Text */
@@ -224,7 +224,7 @@ p {
 .theme-badge {
    display: inline-block;
    background-color: var(--color-secondary);
-   color: var(--text-white);
+   color: var(--text-white)!important;
    padding: 0.3rem 0.8rem;
    font-size: var(--text-sm);
    text-transform: uppercase;
@@ -268,7 +268,7 @@ p {
 
 .article-card img {
    width: 100%;
-   height: 200px;
+   height: 350px;
    object-fit: cover;
    border-bottom: 1px solid var(--bg-lighter);
 }
